<?xml version="1.0"?>
<package>
  <name>allegro_hand_controllers</name>
  <version>1.0.0</version>
  <description>The Main ROS package for controlling Allegro Hand V4</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>allegro_hand_driver</build_depend>
  <build_depend>bhand</build_depend>
  <build_depend>libpcan</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>allegro_hand_description</run_depend>
  <run_depend>allegro_hand_driver</run_depend>
  <run_depend>allegro_hand_parameters</run_depend>
  <run_depend>bhand</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>libpcan</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <!-- Other tools can request additional information be placed here -->

  </export>
</package>
