<?xml version="1.0"?>
<package>
  <name>allegro_hand_description</name>
  <version>1.0.0</version>
  <description>URDF/Xacro descriptions, RViz configurations, and hand meshes.</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
        <!-- Other tools can request additional information be placed here -->
  </export>
</package>
