<?xml version="1.0"?>
<package>
  <name>allegro_hand_keyboard</name>
  <version>1.0.0</version>
  <description>The keyboard grasp commands.</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
