<?xml version="1.0"?>
<package>
  <name>allegro_hand_parameters</name>
  <version>1.0.0</version>
  <description>The ROS package stores all configuration parameters of Allegro Hand V4</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
