<?xml version="1.0"?>
<package>
  <name>allegro_hand_python</name>
  <version>1.0.0</version>
  <description>ROS python interface to the allegro hand.</description>
  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>allegro_hand_controllers</run_depend>
  <run_depend>allegro_hand_description</run_depend>
  <run_depend>allegro_hand_driver</run_depend>
  <run_depend>allegro_hand_keyboard</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
