<?xml version="1.0"?>
<package>
  <name>bhand</name>
  <version>1.0.0</version>
  <description>BHand Library for Allegro Hand V4. You should first download and build `libBHand`</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="j.y_lee@wonikrobotics.com">JungYeon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
